package ar.edu.utn.frba.dds.servicioFuenteDinamica.enums;

public enum EstadoHecho {
    PENDIENTE_REVISION,
    ACEPTADO,
    ACEPTADO_CON_CAMBIOS,
    RECHAZADO
}
